# RINGMesh

./: .clang-format  .clang-tidy  .clang-tidy~  .cproject  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .hgtags.orig  .project  .script.sh.swp  .texlipse  .travis.yml  CMakeLists.txt  CMakeOptions.txt.sample  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README.rst  README.txt  RINGMeshConfig.cmake  appveyor.yml  appveyor.yml.orig  appveyor_code_coverage.cmd  bitbucket-pipelines.yml  changelog.txt  changelog.txt.orig  codeship-services.yml  codeship-steps.yml  compile_commands.json  configure.bat  configure.sh  configure_dev.sh  configure_ringmesh.bat  drone.yml  launch_coverage.cmd  (+8 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile_online  RINGMesh_programming_guidelines.txt  RINGMesh_programming_guidelines.txt.orig  VS2013_formatter.vssettings  VS2015_formatter.vssettings  common.dox  custom-doxygen.css  devkit-lite.dox.in  devkit.dox.in  doxygen-bootstrap.js  eclipse_formater_chauvin_tmp_to_compare.xml  eclipse_formatter.xml  eclipse_formatter.xml.orig  footer.html  header.html  ringmesh.uxf  uncrustify.cfg
doc/dox/: boundary_model.dox  cmake_integration.dox  compiling.dox  features.dox  file_format.dox  geo_model.dox  geo_model_mesh.dox  license.dox  macro_mesh.dox  mainpage.dox  programming_guidelines.dox
doc/latex/: refman.tex
doc/tutorials/: CMakeLists.txt
doc/tutorials/src/: geomodel-basics.cpp  geomodel-building.cpp  ringmesh_tutorials_config.h.in
doc/uncrustify_formatter/: README  call_uncrustify.bat  call_uncrustify.sh  uncrustify.cfg
src/ringmesh/basic/: CMakeLists.txt  aabb.cpp  attributes.cpp  basic_js.cpp  box.cpp  box3d.cpp  boxnd.cpp  command_line.cpp  common.cpp  frame.cpp  geometry.cpp  geometry.cpp.orig  geometry_distance.cpp  geometry_intersection.cpp  geometry_position.cpp  logger.cpp  nn_search.cpp  nnsearch.cpp  plugin_manager.cpp  ringmesh_assert.cpp  singleton.cpp
src/ringmesh/geogram_extension/: CMakeLists.txt  common.cpp  geogram_extension.cpp  geogram_mesh.cpp  geogram_mesh_repair.cpp
src/ringmesh/io/: CMakeLists.txt  common.cpp  geomodel_adapter_resqml.cpp  geomodel_builder_file.cpp  geomodel_builder_gocad.cpp  geomodel_builder_resqml.cpp  io.cpp  io.cpp.orig  io_boundary_geo_model.cpp  io_boundary_geomodel.cpp  io_full_geo_model.cpp  io_full_geo_model.cpp.orig  io_full_geomodel.cpp  io_full_geomodel.cpp.orig  io_gemodel.cpp  io_geomodel.cpp  io_js.cpp  io_stratcol.cpp  io_stratigraphic_column.cpp  io_total.cpp  io_well_group.cpp  zip_file.cpp
src/ringmesh/tetrahedralize/: CMakeLists.txt  common.cpp  tetgen_mesher.cpp  tetra_gen.cpp
tests/: CMakeLists.txt  ringmesh_tests_config.h.in  tests.cmake  valgrind.sh  valgrind.supp
tests/basic/: CMakeLists.txt  test-box.cpp  test-factory.cpp  test-geometry-distance.cpp  test-geometry-intersection.cpp  test-geometry-position.cpp  test-geometry.cpp  test-matrix.cpp  test-nn-search.cpp  test-plugin-manager.cpp
tests/data/: CloudSpin.ml  CloudSpin.xml  CloudSpinWithoutSaltRegion.ml  CloudSpin_fixed.ml  README.txt  beam_model.gm  column_gocad.xml  corbieres.bm  corbieres.gm  corbieres.mail  model1.ml  model3.ml  modelA1.ml  modelA1.stl  modelA1_version0.gm  modelA1_version1.gm  modelA1_version2.gm  modelA1_volume_meshed.gm  modelA2.ml  modelA4.ml  modelA5.ml  modelA6.mesh  model_2d_version2.gm  noTouch.ml  noTouch10.mm  non_split_cube.ml  not_sealed_cube.ml  poutre_global_3.bm  poutre_global_3.gm  seg_overthrust_afault.gm  split_cube.eobj  split_cube.ml  stradivarius.model  test_build_geomodel_from_mesh.cpp  test_geomodel_tetrahedralize.cpp  test_geomodel_tetrahedralize_with_MGTetra.cpp  test_load_geomodel_ml_file.cpp  test_load_geomodel_so_file.cpp  test_make_unique.cpp  unit_cube_volume_meshed.gm
tests/data/load/: CloudSpin.ml  CloudSpin_fixed.ml.txt  ml3d.txt  modelA1_version1.gm.txt  modelA4.so.txt  modelA6.ml.txt  model_2d_version2.gm.txt  svg2d.txt  (+3 more)
tests/geogram_extension/: CMakeLists.txt  test-geogram-mesh-factories.cpp
tests/io/: CMakeLists.txt  test-geomodel-resqml2-mixed-element-unstructured_grid.cpp  test-geomodel-resqml2-round-trip.cpp  test-io-initialize.cpp  test-load-geomodel.cpp  test-save-geomodel.cpp
tests/mesh/: CMakeLists.txt  test-cartesian-grid.cpp  test-connected-components.cpp  test-mesh-aabb.cpp
tests/src/: ringmesh_tests_config.h.in  temp-build-2d.cpp  test-aabb.cpp  test-annot-load-and-repair.cpp  test-attributes.cpp  test-build-2d-geomodels-from-3d.cpp  test-cartesian-grid.cpp  test-connected-components.cpp  test-default-configure.cpp  test-factory.cpp  test-factory2.cpp  test-geometry-intersection.cpp  test-geometry-position.cpp  test-geometry.cpp  test-geomodel-from-surface.cpp  test-geomodel-invalidities.cpp  test-geomodel-tetrahedralize-with-MGTetra.cpp  test-geomodel-tetrahedralize-with-TetGen.cpp  test-geomodel-vertices.cpp  test-get-dependent-entities.cpp  test-load-geomodel-gm-file.cpp  test-load-geomodel-ml-file.cpp  test-load-geomodel-ml-file.cpp.orig  test-load-geomodel-so-file.cpp  test-load-geomodel-stradivarius-file.cpp  test-load-geomodel-svg-file.cpp  test-load-geomodel.cpp  test-matrix.cpp  test-nn-search.cpp  test-repair-annot.cpp  test-ringmeshview.cpp  test-save-geomodel.cpp  test-stratigraphic-column.cpp  test-transfer-attributes-gm-gmm.cpp  test-transrot.cpp  test-transrot.cpp.orig  test_aabb.cpp  test_annot_load_and_repair.cpp  test_build_bm_surface.cpp  test_build_geomodel_from_mesh.cpp  (+24 more)
tests/test_build_bm_surface/: CMakeLists.txt  main.cpp
tests/test_claire/: main.cpp
tests/test_get_dependent_elements/: CMakeLists.txt  main.cpp
tests/test_intersection/: main.cpp
tests/test_io_bm/: CMakeLists.txt  main.cpp
tests/test_io_ml/: CMakeLists.txt  main.cpp  main.cpp.orig
tests/test_make_unique/: CMakeLists.txt  main.cpp
tests/test_rotation/: CMakeLists.txt  main.cpp
tests/test_tetrahedralize/: CMakeLists.txt  main.cpp
tests/tetrahedralize/: CMakeLists.txt  test-geomodel-tetrahedralize-with-MGTetra.cpp  test-geomodel-tetrahedralize-with-TetGen.cpp  test-tetragen-initialize.cpp
(+792 files in other folders)
